# sctypepy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
example/: run_sctype.py
src/sctypepy/: __init__.py  core.py  io.py  scoring.py
src/sctypepy/data/: markers.csv
tests/: test_sctype.py
