[project]
name = "sctypepy"
version = "0.1.0"
description = "Sc-Type, but in Python"
readme = "README.md"
authors = [
    { name = "Henry Zhang", email = "zeri@umich.edu"},
    { name = "Aleksandr Ianevski", email = "aleksandr.ianevski@helsinki.fi"}
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
requires-python = ">=3.12"
dependencies = [
    "leidenalg>=0.11.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "python-igraph>=1.0.0",
    "scanpy>=1.11.5",
    "scipy>=1.16.3",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
